Now using localstorage to perisit the app config

--- a/src/mn-category-list/mn-category-list.html
+++ b/src/mn-category-list/mn-category-list.html
@@ -41,8 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     /* Contains an array of textual categorys */
                     categorys: {
                         type: Array,
-                        notify: true,
-                        //observer: '_onCategorysChange'
+                        notify: true
                     },
                     /* Contains the currently selected category */
                     selectedCategory: {
